--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ p {
 }
 
 .header-title h1 {
+    font-size: 40px;
     width: 80vw;
     font-weight: 600;
     padding: 10px 0;
@@ -72,11 +73,12 @@ p {
 .btn {
     font-family: 'Bai Jamjuree', sans-serif;
     font-size: 18px;
-    padding: 5px 25px;
+    padding: 15px 35px;
     border-radius: 15px;
     color: white;
     font-weight: 600;
     transition: ease-in-out 0.1s;
+    box-shadow: 0px 10px 4px #dadada;
 }
 
 .btn:hover {
@@ -116,6 +118,7 @@ p {
 }
 .main-feature h2 {
     text-align: center;
+    font-size: 30px;
 }
 
 .main-feature p {
@@ -146,7 +149,7 @@ p {
 }
 
 .advantage h3 {
-    font-size: 30px;
+    font-size: 24px;
 }
 
 .computer-image {
